content/docs/9500_python-api/9000_versions/v0.2.18/splitgraph.ingestion.csv.mdx



export const meta = {
  title: "splitgraph.ingestion.csv package",
  id: "splitgraph.ingestion.csv package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#submodules">Submodules</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphingestioncsvcommon-module">splitgraph.ingestion.csv.common module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphingestioncsvfdw-module">splitgraph.ingestion.csv.fdw module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li></ol></nav><section id="splitgraph-ingestion-csv-package">

<section id="submodules">
<h2 id="submodules">Submodules<a className="headerlink" href="#submodules" title="Permalink to this headline"></a></h2>
</section>
<section id="module-splitgraph.ingestion.csv.common">
<span id="splitgraph-ingestion-csv-common-module"></span><h2 id="splitgraphingestioncsvcommon-module">splitgraph.ingestion.csv.common module<a className="headerlink" href="#module-splitgraph.ingestion.csv.common" title="Permalink to this headline"></a></h2>
<dl className="py class">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions">
<em className="property"><span className="pre">class</span><span className="w"> </span></em><span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">CSVOptions</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">autodetect_header</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">autodetect_dialect</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">autodetect_encoding</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">autodetect_sample_size</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema_inference_rows</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">delimiter</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">quotechar</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">header</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">encoding</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">ignore_decode_errors</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions" title="Permalink to this definition"></a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">tuple</span></code></p>
<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.autodetect_dialect">
<span className="sig-name descname"><span className="pre">autodetect_dialect</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">bool</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.autodetect_dialect" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 1</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.autodetect_encoding">
<span className="sig-name descname"><span className="pre">autodetect_encoding</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">bool</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.autodetect_encoding" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 2</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.autodetect_header">
<span className="sig-name descname"><span className="pre">autodetect_header</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">bool</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.autodetect_header" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 0</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.autodetect_sample_size">
<span className="sig-name descname"><span className="pre">autodetect_sample_size</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">int</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.autodetect_sample_size" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 3</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.delimiter">
<span className="sig-name descname"><span className="pre">delimiter</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">str</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.delimiter" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 5</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.encoding">
<span className="sig-name descname"><span className="pre">encoding</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">str</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.encoding" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 8</p>
</dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.from_fdw_options">
<em className="property"><span className="pre">classmethod</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">from_fdw_options</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">fdw_options</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.from_fdw_options" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.header">
<span className="sig-name descname"><span className="pre">header</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">bool</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.header" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 7</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.ignore_decode_errors">
<span className="sig-name descname"><span className="pre">ignore_decode_errors</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">bool</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.ignore_decode_errors" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 9</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.quotechar">
<span className="sig-name descname"><span className="pre">quotechar</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">str</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.quotechar" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 6</p>
</dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.schema_inference_rows">
<span className="sig-name descname"><span className="pre">schema_inference_rows</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">int</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.schema_inference_rows" title="Permalink to this definition"></a></dt>
<dd><p>Alias for field number 4</p>
</dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.to_csv_kwargs">
<span className="sig-name descname"><span className="pre">to_csv_kwargs</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.to_csv_kwargs" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.CSVOptions.to_table_options">
<span className="sig-name descname"><span className="pre">to_table_options</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.common.CSVOptions.to_table_options" title="Permalink to this definition"></a></dt>
<dd><p>Turn this into a dict of table options that can be plugged back into CSVDataSource.</p>
</dd></dl>

</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.autodetect_csv">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">autodetect_csv</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">stream</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">io.RawIOBase</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">csv_options</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><a className="reference internal" href="#splitgraph.ingestion.csv.common.CSVOptions" title="splitgraph.ingestion.csv.common.CSVOptions"><span className="pre">splitgraph.ingestion.csv.common.CSVOptions</span></a></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><a className="reference internal" href="#splitgraph.ingestion.csv.common.CSVOptions" title="splitgraph.ingestion.csv.common.CSVOptions"><span className="pre">splitgraph.ingestion.csv.common.CSVOptions</span></a></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.common.autodetect_csv" title="Permalink to this definition"></a></dt>
<dd><p>Autodetect the CSV dialect, encoding, header etc.</p>
</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.bool_to_str">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">bool_to_str</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">boolean</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">bool</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">str</span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.common.bool_to_str" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.get_bool">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">get_bool</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">key</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">default</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">bool</span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">True</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">bool</span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.common.get_bool" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.get_s3_params">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">get_s3_params</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">fdw_options</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">minio.api.Minio</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.common.get_s3_params" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.log_to_postgres">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">log_to_postgres</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="o"><span className="pre">*</span></span><span className="n"><span className="pre">args</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.common.log_to_postgres" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.make_csv_reader">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">make_csv_reader</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">response</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">io.IOBase</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">csv_options</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><a className="reference internal" href="#splitgraph.ingestion.csv.common.CSVOptions" title="splitgraph.ingestion.csv.common.CSVOptions"><span className="pre">splitgraph.ingestion.csv.common.CSVOptions</span></a></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="#splitgraph.ingestion.csv.common.CSVOptions" title="splitgraph.ingestion.csv.common.CSVOptions"><span className="pre">splitgraph.ingestion.csv.common.CSVOptions</span></a><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">_csv._reader</span><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.common.make_csv_reader" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.common.pad_csv_row">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.common.</span></span><span className="sig-name descname"><span className="pre">pad_csv_row</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">row</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">num_cols</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">int</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">row_number</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">int</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.common.pad_csv_row" title="Permalink to this definition"></a></dt>
<dd><p>Preprocess a CSV file row to make the parser more robust.</p>
</dd></dl>

</section>
<section id="module-splitgraph.ingestion.csv.fdw">
<span id="splitgraph-ingestion-csv-fdw-module"></span><h2 id="splitgraphingestioncsvfdw-module">splitgraph.ingestion.csv.fdw module<a className="headerlink" href="#module-splitgraph.ingestion.csv.fdw" title="Permalink to this headline"></a></h2>
<dl className="py class">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper">
<em className="property"><span className="pre">class</span><span className="w"> </span></em><span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.fdw.</span></span><span className="sig-name descname"><span className="pre">CSVForeignDataWrapper</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">fdw_options</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">fdw_columns</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper" title="Permalink to this definition"></a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">object</span></code></p>
<p>Foreign data wrapper for CSV files stored in S3 buckets or HTTP</p>
<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.can_sort">
<span className="sig-name descname"><span className="pre">can_sort</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">sortkeys</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.can_sort" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.execute">
<span className="sig-name descname"><span className="pre">execute</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">quals</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">columns</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">sortkeys</span></span><span className="o"><span className="pre">=</span></span><span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.execute" title="Permalink to this definition"></a></dt>
<dd><p>Main Multicorn entry point.</p>
</dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.explain">
<span className="sig-name descname"><span className="pre">explain</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">quals</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">columns</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">sortkeys</span></span><span className="o"><span className="pre">=</span></span><span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">verbose</span></span><span className="o"><span className="pre">=</span></span><span className="default_value"><span className="pre">False</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.explain" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.get_rel_size">
<span className="sig-name descname"><span className="pre">get_rel_size</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">quals</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">columns</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.get_rel_size" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.import_schema">
<em className="property"><span className="pre">classmethod</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">import_schema</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">schema</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">srv_options</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">options</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">restriction_type</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">restricts</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.import_schema" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.log_to_postgres">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.fdw.</span></span><span className="sig-name descname"><span className="pre">log_to_postgres</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="o"><span className="pre">*</span></span><span className="n"><span className="pre">args</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.log_to_postgres" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.fdw.report_errors">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.fdw.</span></span><span className="sig-name descname"><span className="pre">report_errors</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">table_name</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.report_errors" title="Permalink to this definition"></a></dt>
<dd><p>Context manager that ignores exceptions and serializes them to JSON using PG’s notice
mechanism instead. The data source is meant to load these to report on partial failures
(e.g. failed to load one table, but not others).</p>
</dd></dl>

</section>
<section id="module-splitgraph.ingestion.csv">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph.ingestion.csv" title="Permalink to this headline"></a></h2>
<dl className="py class">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource">
<em className="property"><span className="pre">class</span><span className="w"> </span></em><span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></span><span className="sig-name descname"><span className="pre">CSVDataSource</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">credentials</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Credentials</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Params</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">tables</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">TableParams</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource" title="Permalink to this definition"></a></dt>
<dd><p>Bases: <a className="reference internal" href="splitgraph.hooks.data_source/#splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource" title="splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource</span></code></a></p>
<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.commandline_help">
<span className="sig-name descname"><span className="pre">commandline_help</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">str</span></em><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">'Mount</span> <span className="pre">CSV</span> <span className="pre">files</span> <span className="pre">in</span> <span className="pre">S3/HTTP.\n\nIf</span> <span className="pre">passed</span> <span className="pre">an</span> <span className="pre">URL,</span> <span className="pre">this</span> <span className="pre">will</span> <span className="pre">live</span> <span className="pre">query</span> <span className="pre">a</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">on</span> <span className="pre">an</span> <span className="pre">HTTP</span> <span className="pre">server.</span> <span className="pre">If</span> <span className="pre">passed\nS3</span> <span className="pre">access</span> <span className="pre">credentials,</span> <span className="pre">this</span> <span className="pre">will</span> <span className="pre">scan</span> <span className="pre">a</span> <span className="pre">bucket</span> <span className="pre">for</span> <span className="pre">CSV</span> <span className="pre">files,</span> <span className="pre">infer</span> <span className="pre">their</span> <span className="pre">schema\nand</span> <span className="pre">make</span> <span className="pre">them</span> <span className="pre">available</span> <span className="pre">to</span> <span className="pre">query</span> <span className="pre">over</span> <span className="pre">SQL.</span>  <span className="pre">\n\nFor</span> <span className="pre">example:</span>  <span className="pre">\n\n\x08\n```\nsgr</span> <span className="pre">mount</span> <span className="pre">csv</span> <span className="pre">target_schema</span> <span className="pre">-o@-</span> <span className="pre">&lt;&lt;EOF\n</span>  <span className="pre">&#38;lbrace;\n</span>    <span className="pre">"s3_endpoint":</span> <span className="pre">"cdn.mycompany.com:9000",\n</span>    <span className="pre">"s3_access_key":</span> <span className="pre">"ABCDEF",\n</span>    <span className="pre">"s3_secret_key":</span> <span className="pre">"GHIJKL",\n</span>    <span className="pre">"s3_bucket":</span> <span className="pre">"data",\n</span>    <span className="pre">"s3_object_prefix":</span> <span className="pre">"csv_files/current/",\n</span>    <span className="pre">"autodetect_header":</span> <span className="pre">true,\n</span>    <span className="pre">"autodetect_dialect":</span> <span className="pre">true,\n</span>    <span className="pre">"autodetect_encoding":</span> <span className="pre">true\n</span>  <span className="pre">&#38;rbrace;\nEOF\n```\n'</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.commandline_help" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.commandline_kwargs_help">
<span className="sig-name descname"><span className="pre">commandline_kwargs_help</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">str</span></em><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">"s3_access_key:\ns3_secret_key:\nconnection:\nautodetect_header:</span> <span className="pre">Detect</span> <span className="pre">whether</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">has</span> <span className="pre">a</span> <span className="pre">header</span> <span className="pre">automatically.\nautodetect_dialect:</span> <span className="pre">Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">dialect</span> <span className="pre">(separator,</span> <span className="pre">quoting</span> <span className="pre">characters</span> <span className="pre">etc)</span> <span className="pre">automatically.\nautodetect_encoding:</span> <span className="pre">Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">encoding</span> <span className="pre">automatically.\nautodetect_sample_size:</span> <span className="pre">Sample</span> <span className="pre">size,</span> <span className="pre">in</span> <span className="pre">bytes,</span> <span className="pre">for</span> <span className="pre">encoding/dialect/header</span> <span className="pre">detection.\nschema_inference_rows:</span> <span className="pre">Number</span> <span className="pre">of</span> <span className="pre">rows</span> <span className="pre">to</span> <span className="pre">use</span> <span className="pre">for</span> <span className="pre">schema</span> <span className="pre">inference.\nencoding:</span> <span className="pre">Encoding</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file.\nignore_decode_errors:</span> <span className="pre">Ignore</span> <span className="pre">errors</span> <span className="pre">when</span> <span className="pre">decoding</span> <span className="pre">the</span> <span className="pre">file.\nheader:</span> <span className="pre">First</span> <span className="pre">line</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">is</span> <span className="pre">its</span> <span className="pre">header.\ndelimiter:</span> <span className="pre">Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">separate</span> <span className="pre">fields</span> <span className="pre">in</span> <span className="pre">the</span> <span className="pre">file.\nquotechar:</span> <span className="pre">Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">quote</span> <span className="pre">fields."</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.commandline_kwargs_help" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.credentials_schema">
<span className="sig-name descname"><span className="pre">credentials_schema</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'s3_access_key':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_secret_key':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.credentials_schema" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.from_commandline">
<em className="property"><span className="pre">classmethod</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">from_commandline</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">commandline_kwargs</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><a className="reference internal" href="#splitgraph.ingestion.csv.CSVDataSource" title="splitgraph.ingestion.csv.CSVDataSource"><span className="pre">splitgraph.ingestion.csv.CSVDataSource</span></a></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.from_commandline" title="Permalink to this definition"></a></dt>
<dd><p>Instantiate an FDW data source from commandline arguments.</p>
</dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_description">
<em className="property"><span className="pre">classmethod</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">get_description</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">str</span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_description" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_fdw_name">
<span className="sig-name descname"><span className="pre">get_fdw_name</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_fdw_name" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_name">
<em className="property"><span className="pre">classmethod</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">get_name</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">str</span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_name" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_raw_url">
<span className="sig-name descname"><span className="pre">get_raw_url</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">tables</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">TableParams</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">expiry</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">int</span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">3600</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_raw_url" title="Permalink to this definition"></a></dt>
<dd><p>Get a list of public URLs for each table in this data source, e.g. to export the data
as CSV. These may be temporary (e.g. pre-signed S3 URLs) but should be accessible without
authentication.
:param tables: A TableInfo object overriding the table params of the source
:param expiry: The URL should be valid for at least this many seconds
:return: Dict of table_name -> list of (mimetype, raw URL)</p>
</dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_remote_schema_name">
<span className="sig-name descname"><span className="pre">get_remote_schema_name</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">str</span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_remote_schema_name" title="Permalink to this definition"></a></dt>
<dd><p>Override this if the FDW supports IMPORT FOREIGN SCHEMA</p>
</dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_server_options">
<span className="sig-name descname"><span className="pre">get_server_options</span></span><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_server_options" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.get_table_options">
<span className="sig-name descname"><span className="pre">get_table_options</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">table_name</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">tables</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">TableParams</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_table_options" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.migrate_params">
<em className="property"><span className="pre">classmethod</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">migrate_params</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Params</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">Params</span></span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.migrate_params" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.params_schema">
<span className="sig-name descname"><span className="pre">params_schema</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'autodetect_dialect':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">"Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">dialect</span> <span className="pre">(separator,</span> <span className="pre">quoting</span> <span className="pre">characters</span> <span className="pre">etc)</span> <span className="pre">automatically",</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_encoding':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">"Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">encoding</span> <span className="pre">automatically",</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_header':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">'Detect</span> <span className="pre">whether</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">has</span> <span className="pre">a</span> <span className="pre">header</span> <span className="pre">automatically',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_sample_size':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">65536,</span> <span className="pre">'description':</span> <span className="pre">'Sample</span> <span className="pre">size,</span> <span className="pre">in</span> <span className="pre">bytes,</span> <span className="pre">for</span> <span className="pre">encoding/dialect/header</span> <span className="pre">detection',</span> <span className="pre">'type':</span> <span className="pre">'integer'&#38;rbrace;,</span> <span className="pre">'connection':</span> <span className="pre">&#38;lbrace;'oneOf':</span> <span className="pre">[&#38;lbrace;'type':</span> <span className="pre">'object',</span> <span className="pre">'required':</span> <span className="pre">['connection_type',</span> <span className="pre">'url'],</span> <span className="pre">'properties':</span> <span className="pre">&#38;lbrace;'connection_type':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'const':</span> <span className="pre">'http'&#38;rbrace;,</span> <span className="pre">'url':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'description':</span> <span className="pre">'HTTP</span> <span className="pre">URL</span> <span className="pre">to</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file'&#38;rbrace;&#38;rbrace;&#38;rbrace;,</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'object',</span> <span className="pre">'required':</span> <span className="pre">['connection_type',</span> <span className="pre">'s3_endpoint',</span> <span className="pre">'s3_bucket'],</span> <span className="pre">'properties':</span> <span className="pre">&#38;lbrace;'connection_type':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'const':</span> <span className="pre">'s3'&#38;rbrace;,</span> <span className="pre">'s3_endpoint':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'description':</span> <span className="pre">'S3</span> <span className="pre">endpoint</span> <span className="pre">(including</span> <span className="pre">port</span> <span className="pre">if</span> <span className="pre">required)'&#38;rbrace;,</span> <span className="pre">'s3_region':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'description':</span> <span className="pre">'Region</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">S3</span> <span className="pre">bucket'&#38;rbrace;,</span> <span className="pre">'s3_secure':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'boolean',</span> <span className="pre">'description':</span> <span className="pre">'Whether</span> <span className="pre">to</span> <span className="pre">use</span> <span className="pre">HTTPS</span> <span className="pre">for</span> <span className="pre">S3</span> <span className="pre">access'&#38;rbrace;,</span> <span className="pre">'s3_bucket':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'description':</span> <span className="pre">'Bucket</span> <span className="pre">the</span> <span className="pre">object</span> <span className="pre">is</span> <span className="pre">in'&#38;rbrace;,</span> <span className="pre">'s3_object':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'description':</span> <span className="pre">'Limit</span> <span className="pre">the</span> <span className="pre">import</span> <span className="pre">to</span> <span className="pre">a</span> <span className="pre">single</span> <span className="pre">object'&#38;rbrace;,</span> <span className="pre">'s3_object_prefix':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string',</span> <span className="pre">'description':</span> <span className="pre">'Prefix</span> <span className="pre">for</span> <span className="pre">object</span> <span className="pre">in</span> <span className="pre">S3</span> <span className="pre">bucket'&#38;rbrace;&#38;rbrace;&#38;rbrace;],</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;,</span> <span className="pre">'delimiter':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">',',</span> <span className="pre">'description':</span> <span className="pre">'Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">separate</span> <span className="pre">fields</span> <span className="pre">in</span> <span className="pre">the</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'encoding':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">'utf-8',</span> <span className="pre">'description':</span> <span className="pre">'Encoding</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'header':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">'First</span> <span className="pre">line</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">is</span> <span className="pre">its</span> <span className="pre">header',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'ignore_decode_errors':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">False,</span> <span className="pre">'description':</span> <span className="pre">'Ignore</span> <span className="pre">errors</span> <span className="pre">when</span> <span className="pre">decoding</span> <span className="pre">the</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'quotechar':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">'"',</span> <span className="pre">'description':</span> <span className="pre">'Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">quote</span> <span className="pre">fields',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'schema_inference_rows':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">100000,</span> <span className="pre">'description':</span> <span className="pre">'Number</span> <span className="pre">of</span> <span className="pre">rows</span> <span className="pre">to</span> <span className="pre">use</span> <span className="pre">for</span> <span className="pre">schema</span> <span className="pre">inference',</span> <span className="pre">'type':</span> <span className="pre">'integer'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.params_schema" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.supports_load">
<span className="sig-name descname"><span className="pre">supports_load</span></span><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">True</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.supports_load" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.supports_mount">
<span className="sig-name descname"><span className="pre">supports_mount</span></span><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">True</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.supports_mount" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.supports_sync">
<span className="sig-name descname"><span className="pre">supports_sync</span></span><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">False</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.supports_sync" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVDataSource.table_params_schema">
<span className="sig-name descname"><span className="pre">table_params_schema</span></span><em className="property"><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span></span><span className="w"> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"><span className="w"> </span><span className="p"><span className="pre">=</span></span><span className="w"> </span><span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'autodetect_dialect':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">"Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">dialect</span> <span className="pre">(separator,</span> <span className="pre">quoting</span> <span className="pre">characters</span> <span className="pre">etc)</span> <span className="pre">automatically",</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_encoding':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">"Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">encoding</span> <span className="pre">automatically",</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_header':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">'Detect</span> <span className="pre">whether</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">has</span> <span className="pre">a</span> <span className="pre">header</span> <span className="pre">automatically',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_sample_size':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">65536,</span> <span className="pre">'description':</span> <span className="pre">'Sample</span> <span className="pre">size,</span> <span className="pre">in</span> <span className="pre">bytes,</span> <span className="pre">for</span> <span className="pre">encoding/dialect/header</span> <span className="pre">detection',</span> <span className="pre">'type':</span> <span className="pre">'integer'&#38;rbrace;,</span> <span className="pre">'delimiter':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">',',</span> <span className="pre">'description':</span> <span className="pre">'Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">separate</span> <span className="pre">fields</span> <span className="pre">in</span> <span className="pre">the</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'encoding':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">'utf-8',</span> <span className="pre">'description':</span> <span className="pre">'Encoding</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'header':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">True,</span> <span className="pre">'description':</span> <span className="pre">'First</span> <span className="pre">line</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">is</span> <span className="pre">its</span> <span className="pre">header',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'ignore_decode_errors':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">False,</span> <span className="pre">'description':</span> <span className="pre">'Ignore</span> <span className="pre">errors</span> <span className="pre">when</span> <span className="pre">decoding</span> <span className="pre">the</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'quotechar':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">'"',</span> <span className="pre">'description':</span> <span className="pre">'Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">quote</span> <span className="pre">fields',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_object':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'S3</span> <span className="pre">object</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'schema_inference_rows':</span> <span className="pre">&#38;lbrace;'default':</span> <span className="pre">100000,</span> <span className="pre">'description':</span> <span className="pre">'Number</span> <span className="pre">of</span> <span className="pre">rows</span> <span className="pre">to</span> <span className="pre">use</span> <span className="pre">for</span> <span className="pre">schema</span> <span className="pre">inference',</span> <span className="pre">'type':</span> <span className="pre">'integer'&#38;rbrace;,</span> <span className="pre">'url':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'HTTP</span> <span className="pre">URL</span> <span className="pre">to</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.table_params_schema" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py class">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVIngestionAdapter">
<em className="property"><span className="pre">class</span><span className="w"> </span></em><span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></span><span className="sig-name descname"><span className="pre">CSVIngestionAdapter</span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter" title="Permalink to this definition"></a></dt>
<dd><p>Bases: <a className="reference internal" href="splitgraph.ingestion/#splitgraph.ingestion.common.IngestionAdapter" title="splitgraph.ingestion.common.IngestionAdapter"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.ingestion.common.IngestionAdapter</span></code></a></p>
<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVIngestionAdapter.create_ingestion_table">
<em className="property"><span className="pre">static</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">create_ingestion_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter.create_ingestion_table" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVIngestionAdapter.data_to_new_table">
<em className="property"><span className="pre">static</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">data_to_new_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">bool</span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter.data_to_new_table" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.CSVIngestionAdapter.query_to_data">
<em className="property"><span className="pre">static</span><span className="w"> </span></em><span className="sig-name descname"><span className="pre">query_to_data</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">query</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter.query_to_data" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.copy_csv_buffer">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></span><span className="sig-name descname"><span className="pre">copy_csv_buffer</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">bool</span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.copy_csv_buffer" title="Permalink to this definition"></a></dt>
<dd><p>Copy CSV data from a buffer into a given schema/table</p>
</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.csv.query_to_csv">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></span><span className="sig-name descname"><span className="pre">query_to_csv</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">query</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">buffer</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span><span className="w"> </span><span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span><span className="w"> </span><span className="o"><span className="pre">=</span></span><span className="w"> </span><span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.query_to_csv" title="Permalink to this definition"></a></dt>
<dd></dd></dl>

</section>
</section>
</div>